@@ -19,15 +19,19 @@ eval {$dbh= DBI->connect($test_dsn, $test_user, $test_password,
 if ($@) {
     plan skip_all => "ERROR: $@. Can't continue test";
 }
-plan tests => 24; 
+plan tests => 25; 
 
 ok (defined $dbh, "Connected to database with multi statement support");
 
 $dbh->{mysql_server_prepare}= 0;
 
 SKIP: {
-  skip "Server doesn't support multi statements", 23
-    if $dbh->get_info($GetInfoType{SQL_DBMS_VER}) lt "4.1";
+  my $v= $dbh->get_info($GetInfoType{SQL_DBMS_VER});
+  diag "Testing multicall against SQL_DBMS_VER: $v";
+  skip "Server doesn't support multi statements", 24
+  if $v lt "4.1";
+   
+  ok($dbh->do("SET SQL_MODE=''"),"init connection SQL_MODE non strict");
 
   ok($dbh->do("DROP TABLE IF EXISTS $table"), "clean up");
 
